--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.application.name=spring-boot-webflux-client
+spring.application.name=servicio-cliente
 server.port:8090
-config.base.endpoint=http://localhost:8080/api/v2/productos
+config.base.endpoint=http://servicio-producto/api/v2/productos
+#si esta en otra maquina es necesario si esta en la misma no
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
